--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html lang="pt">
+<html lang="en">
 	<head>
 
 		<title>Miniport by HTML5 UP</title>
+		<meta name="Curriculo" content="Vinicius Dornellas">
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -29,13 +30,13 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/pic00.jpg" alt="perfil"  /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
 								<h1><strong>Vinícius Dornellas</strong>.</h1>
 							</header>
-							<p>Este é o meu<strong> Currículo </strong>em forma de site, completamente responsivo.</p>
+							<p><strong>Este é o meu Currículo em forma de site, completamente responsivo.</strong></p>
 							<a href="#work" class="button large scrolly">Saiba mais sobre mim</a>
 						</div>
 					</div>
@@ -47,28 +48,28 @@
 				<div class="container">
 					<header>
 						<h2>Aqui estão algumas das minhas habilidades.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
 								<h3>Desenvolvimento Web</h3>
-								<p>Desenvolvimento de sites utilizando HTML/CSS juntamente com JavaScript.</p>
+								<p><strong>Desenvolvimento de sites utilizando HTML/CSS juntamente com JavaScript.</strong></p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
 								<h3>Banco de Dados</h3>
-								<p>Criação, consulta e programação de Banco de Dados utilizando as linguagens de meu conhecimento: SQL, MySQL.</p>
+								<p><strong>Criação, consulta e programação de Banco de Dados utilizando as linguagens de meu conhecimento: SQL, MySQL.</strong></p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
 								<h3>Java</h3>
-								<p>Desenvolvimento Back-End utilizando Java e SpringBoot como framework.</p>
+								<p><strong>Desenvolvimento Back-End utilizando Java e SpringBoot como framework.</strong></p>
 							</section>
 						</div>
 					</div>
@@ -89,23 +90,23 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="projeto1" /></a>
 								<h3><a href="#">Projeto de Extensão</a></h3>
-								<p>Patrocinado pela FACEPE, automatizamos o processo de uma fábrica de estofados.</p>
+								<p><strong>Patrocinado pela FACEPE, automatizamos o processo de uma fábrica de estofados.</strong></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="projeto2" /></a>
 								<h3><a href="#">Projeto de Extensão</a></h3>
-								<p>Criação de um site para uma empresária da área de moda, com integração de um provador virtual.</p>
+								<p><strong>Criação de um site para uma empresária da área de moda, com integração de um provador virtual.</strong></p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="projeto3" /></a>
 								<h3><a href="#">Desenvolvimento Web</a></h3>
-								<p>Criação de um site para uma loja de doces.</p>
+								<p><strong>Criação de um site para uma loja de doces.</strong></p>
 							</article>
 						</div>
 						<!--<div class="col-4 col-6-medium col-12-small">
@@ -173,13 +174,13 @@
 							<hr />
 							<h3>Me ache em...</h3>
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
-								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<!--<li><a href="https://twitter.com/vinidcw" target="_blank" class="icon brands fa-twitter" aria-label="Twitter"><span class="label">Twitter</span></a></li> -->
+								<!--<li><a href="#" class="icon brands fa-facebook-f" aria-label="Facebook"><span class="label">Facebook</span></a></li> -->
+								<!--<li><a href="#" class="icon brands fa-dribbble" aria-label="Dribbble"><span class="label">Dribbble</span></a></li> -->
+								<li><a href="https://www.linkedin.com/in/vinicius-dornellas" class="icon brands fa-linkedin-in" aria-label="LinkedIN"><span class="label">LinkedIn</span></a></li>
+								<!-- <li><a href="#" class="icon brands fa-tumblr" aria-label="Tumblr"><span class="label">Tumblr</span></a></li> -->
+								<!--<li><a href="#" class="icon brands fa-google-plus" aria-label="Google+"><span class="label">Google+</span></a></li> -->
+								<li><a href="https://github.com/viniciusdornellas" class="icon brands fa-github" aria-label="GitHub"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
