--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 <html lang="en">
 	<head>
 
-		<title>Miniport by HTML5 UP</title>
+		<title>Curriculo VD</title>
 		<meta name="Curriculo" content="Vinicius Dornellas">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/9e7afcca-72a1-47fe-81ad-ccb081ae12e7.png "/>
 	</head>
 	<body class="is-preload">
 
