--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 		<title>Curriculo VD</title>
 		<meta name="Curriculo" content="Vinicius Dornellas">
 		<meta charset="utf-8" />
+		<meta name="theme-color" content="#2d2828">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="apple-touch-icon" href="images/icon.png" type="images/png">
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="images/9e7afcca-72a1-47fe-81ad-ccb081ae12e7.png "/>
+		<link rel="icon" href="images/icon.png "/>
+		<link rel="manifest" href="manifest.json" />
 	</head>
 	<body class="is-preload">
 
@@ -212,6 +215,10 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			<script>
+				if (typeof navigator.serviceWorker !== 'undefined') {
+				  navigator.serviceWorker.register('pwabuilder-sw.js')
+				}
+			  </script>
 	</body>
 </html>
